# gitlab-ci

./: .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  README.md  Taskfile.yml  cliff.toml  pyproject.toml
ext/: .build_docker_image.yml  .gitlab-ci_.yml  .gitlab-ci_go.yml  .gitlab-ci_py.yml
taskfiles/: b2v.yml  pre-commit.yml
